--- a/diapos/MaquinasAparamenta.tex
+++ b/diapos/MaquinasAparamenta.tex
@@ -1,4 +1,4 @@
-% Created 2018-10-26 vie 00:10
+% Created 2018-11-10 sáb 19:23
 % Intended LaTeX compiler: pdflatex
 \documentclass[xcolor={usenames,svgnames,dvipsnames}]{beamer}
 \usepackage[utf8]{inputenc}
@@ -52,9 +52,9 @@
 \maketitle
 
 \section{Fundamentos de Electromagnetismo}
-\label{sec:orge24c6d5}
+\label{sec:orgcda8945}
 
-\begin{frame}[label={sec:org127a0f0}]{Fuerza Magnética}
+\begin{frame}[label={sec:org7c81573}]{Fuerza Magnética}
 Un campo magnético ejerce una fuerza sobre una carga en movimiento (o corriente eléctrica en un conductor) \footnote{Fuerza de Lorentz}.
 \[
 \vec{F} = q (\vec{v} \times \vec{B})
@@ -75,7 +75,7 @@ Un campo magnético ejerce una fuerza sobre una carga en movimiento (o corriente
 \end{columns}
 \end{frame}
 
-\begin{frame}[label={sec:org91a048f}]{Campo Magnético creado por un Conductor}
+\begin{frame}[label={sec:orge2118cc}]{Campo Magnético creado por un Conductor}
 Una corriente eléctrica crea un campo magnético en torno al conductor\footnote{Ley de Biot-Savart (y Oersted). Ley de Ampere.}. 
 
 \begin{columns}
@@ -92,7 +92,7 @@ Una corriente eléctrica crea un campo magnético en torno al conductor\footnote
 \end{columns}
 \end{frame}
 
-\begin{frame}[label={sec:orge8dab45}]{Interacción entre Conductores}
+\begin{frame}[label={sec:org887883d}]{Interacción entre Conductores}
 Dos conductores se repelen o atraen según el sentido de sus corrientes.
 
 \begin{center}
@@ -102,7 +102,7 @@ Dos conductores se repelen o atraen según el sentido de sus corrientes.
 Vídeo: \href{https://www.youtube.com/watch?v=2j8D\_N1v0tU\&t=0m15s}{Repulsión entre barras de Alta Tensión}
 \end{center}
 \end{frame}
-\begin{frame}[label={sec:orgcd5ab30}]{Flujo Magnético}
+\begin{frame}[label={sec:org03c1321}]{Flujo Magnético}
 El flujo magnético es la cantidad de líneas de fuerza magnética que atraviesan una superficie. 
 
 Depende de la densidad de campo, \(B\), el área de la superficie, \(A\), y la posición relativa entre ambos, \(\theta\).
@@ -116,7 +116,7 @@ Depende de la densidad de campo, \(B\), el área de la superficie, \(A\), y la p
 \end{center}
 \end{frame}
 
-\begin{frame}[label={sec:org8732474}]{Ley de Faraday}
+\begin{frame}[label={sec:org9de1f14}]{Ley de Faraday}
 \begin{itemize}
 \item Cuando el \alert{flujo magnético} que atraviesa una espira es \alert{variable}
 aparece \alert{tensión inducida}.
@@ -144,11 +144,11 @@ variación.
 
 
 \section{Máquinas Eléctricas}
-\label{sec:org42cecca}
+\label{sec:org55a2e8c}
 \subsection{Introducción}
-\label{sec:org399a8eb}
+\label{sec:org7e6befa}
 
-\begin{frame}[label={sec:org4e47adc}]{Máquina Eléctrica}
+\begin{frame}[label={sec:orgc732bd5}]{Máquina Eléctrica}
 Una máquina eléctrica realiza una conversión entre dos formas de energía, una de ellas eléctrica:
 
 \begin{itemize}
@@ -158,7 +158,7 @@ Una máquina eléctrica realiza una conversión entre dos formas de energía, un
 \end{itemize}
 \end{frame}
 
-\begin{frame}[label={sec:orgf93eb53}]{Partes de una Máquina}
+\begin{frame}[label={sec:org1603eb2}]{Partes de una Máquina}
 \begin{columns}
 \begin{column}{0.5\columnwidth}
 \begin{itemize}
@@ -179,29 +179,16 @@ La transformación de energía eléctrica y mecánica se produce a través del c
 \end{block}
 \end{frame}
 
-\begin{frame}[label={sec:org9931e6d}]{Inductor e Inducido}
+\begin{frame}[label={sec:org9db9cf5}]{Inductor e Inducido}
 Al elemento que emite el campo magnético se le denomina \alert{inductor} y aquel que es atravesado por este flujo es el \alert{inducido}.
 \begin{center}
 \includegraphics[height=0.5\textheight]{../figs/Electric_motor_cycle_3.pdf}
 \end{center}
 \end{frame}
 
-\subsection{Motor}
-\label{sec:orgcf07c78}
-\begin{frame}[label={sec:org5bf2508}]{Fundamento}
-\begin{itemize}
-\item La energía eléctrica de \alert{entrada} produce una \alert{corriente eléctrica} que genera un \alert{campo magnético variable}.
-\item Este campo puede \alert{interactuar} con otro \alert{campo magnético existente} o con \alert{otro conductor}, y produce movimiento.
-\item Más habituales:
-\begin{itemize}
-\item \emph{Inducción}
-\item \emph{Corriente Continua}.
-\end{itemize}
-\end{itemize}
-\end{frame}
-
-
-\begin{frame}[label={sec:orgdb691ba}]{Motor asíncrono o de inducción}
+\subsection{Tipos de Motor}
+\label{sec:orga85e835}
+\begin{frame}[label={sec:org1dac7b3}]{Motor asíncrono o de inducción}
 \begin{itemize}
 \item \alert{Estator-Inductor} alimentado por una \alert{corriente trifásica alterna} (\emph{campo giratorio})
 
@@ -217,7 +204,7 @@ Al elemento que emite el campo magnético se le denomina \alert{inductor} y aque
 Vídeos: Motor de inducción artesanal \href{http://www.youtube.com/watch?v=ZRGlAu0uCHY\&feature=related}{(1)} \href{http://www.youtube.com/watch?v=P-eTLmJC2cQ}{(2)}
 \end{frame}
 
-\begin{frame}[label={sec:orgcb46dce}]{Motor DC}
+\begin{frame}[label={sec:org6fae569}]{Motor de corriente continua}
 \begin{itemize}
 \item \alert{Estator-Inductor} genera \alert{campo constante} (imanes permanentes o alimentado por corriente DC).
 
@@ -230,25 +217,10 @@ Vídeos: Motor de inducción artesanal \href{http://www.youtube.com/watch?v=ZRGl
 \end{frame}
 
 
-\subsection{Generador}
-\label{sec:orge3efac1}
+\subsection{Tipos de Generador}
+\label{sec:org5da4a4c}
 
-\begin{frame}[label={sec:org4c0d458}]{Fundamento}
-\begin{itemize}
-\item Existe un \alert{campo magnético en el interior de la máquina} (p. ej. imanes permanentes)
-\item La \alert{energía mecánica de entrada} aporta \alert{movimiento a una bobina} en el seno del campo.
-\item La \alert{interacción} entre el campo y las espiras de la bobina producen una \alert{tensión inducida}.
-\item Más habituales:
-\begin{itemize}
-\item \emph{Síncrono}
-\item \emph{Asíncrono}
-\item \emph{Corriente Continua}.
-\end{itemize}
-\end{itemize}
-\end{frame}
-
-
-\begin{frame}[label={sec:orgb405b27}]{Generador Síncrono o Alternador}
+\begin{frame}[label={sec:orgd85f351}]{Generador Síncrono o Alternador}
 \begin{itemize}
 \item \alert{Rotor-inductor} alimentado por \alert{corriente continua} mediante anillos.
 
@@ -260,7 +232,7 @@ Vídeos: Motor de inducción artesanal \href{http://www.youtube.com/watch?v=ZRGl
 \end{itemize}
 \end{frame}
 
-\begin{frame}[label={sec:org1566632}]{Generador Asíncrono}
+\begin{frame}[label={sec:org63e2bb0}]{Generador Asíncrono}
 \begin{columns}
 \begin{column}{0.6\columnwidth}
 \begin{itemize}
@@ -268,7 +240,7 @@ Vídeos: Motor de inducción artesanal \href{http://www.youtube.com/watch?v=ZRGl
 
 \item \alert{Rotor} constituido por espiras cortocircuitadas (\alert{jaula de ardilla}).
 
-\item Si el rotor gira a mayor velocidad que el campo del estator, se induce corriente \guillemotleft{}de vuelta\guillemotright{} en el estator.
+\item El rotor gira a mayor velocidad que el campo del estator: se induce corriente \guillemotleft{}de vuelta\guillemotright{} en el estator.
 
 \item Empleado en turbinas eólicas.
 \end{itemize}
@@ -282,7 +254,7 @@ Vídeos: Motor de inducción artesanal \href{http://www.youtube.com/watch?v=ZRGl
 \end{columns}
 \end{frame}
 
-\begin{frame}[label={sec:orgff89faa}]{Generador DC}
+\begin{frame}[label={sec:org06e90fe}]{Generador DC}
 \begin{itemize}
 \item \alert{Estator-Inductor} genera campo constante (alimentado por corriente DC o imanes permanentes).
 
@@ -296,8 +268,8 @@ Vídeos: Motor de inducción artesanal \href{http://www.youtube.com/watch?v=ZRGl
 
 
 \subsection{Transformador}
-\label{sec:org52536ef}
-\begin{frame}[label={sec:org6ba17bb}]{Fundamento}
+\label{sec:orgf996e50}
+\begin{frame}[label={sec:org45c63f7}]{Fundamento}
 \begin{columns}
 \begin{column}{0.6\columnwidth}
 \begin{itemize}
@@ -318,7 +290,7 @@ Vídeos: Motor de inducción artesanal \href{http://www.youtube.com/watch?v=ZRGl
 \end{columns}
 \end{frame}
 
-\begin{frame}[label={sec:org10c790b}]{Relación de Transformación}
+\begin{frame}[label={sec:orgd55fc4a}]{Relación de Transformación}
 \begin{align*}
 N_{s}\cdot I_{s} &= N_{p}\cdot I_{p}\\
 \frac{V_{p}}{N_{p}} &= \frac{V_{s}}{N_{s}}
@@ -335,18 +307,18 @@ N_{s}\cdot I_{s} &= N_{p}\cdot I_{p}\\
 
 
 \section{Aparamenta eléctrica}
-\label{sec:org45f386a}
+\label{sec:org8238505}
 
 \subsection{Sistema de Suministro Eléctrico}
-\label{sec:orgc090299}
-\begin{frame}[label={sec:orgd86ce4f}]{Sistema de suministro eléctrico}
+\label{sec:orgd59ca60}
+\begin{frame}[label={sec:org03c1fcf}]{Sistema de suministro eléctrico}
 Un \alert{sistema de suministro eléctrico} tiene como objetivo \alert{producir,
 transportar y distribuir energía eléctrica} a los lugares de consumo,
 con el mínimo coste posible en condiciones de \alert{fiabilidad, calidad y
 seguridad}.
 \end{frame}
 
-\begin{frame}[label={sec:org37a337f}]{Componentes del Sistema de Suministro Eléctrico}
+\begin{frame}[label={sec:org85cffa4}]{Componentes del Sistema de Suministro Eléctrico}
 \begin{center}
 \includegraphics[width=.9\linewidth]{../figs/Redelectrica2.png}
 \end{center}
@@ -367,8 +339,8 @@ algunos casos, almacenamiento)
 
 
 \subsection{Definición y Funciones}
-\label{sec:org7a07bbf}
-\begin{frame}[label={sec:orga96a8ce}]{Aparamenta}
+\label{sec:orgf8d9f84}
+\begin{frame}[label={sec:org9997193}]{Aparamenta}
 \begin{block}{Definición}
 Equipo, aparato o material previsto para ser conectado a un circuito eléctrico con el fin de asegurar una o varias de las siguientes funciones: 
 
@@ -381,31 +353,28 @@ Equipo, aparato o material previsto para ser conectado a un circuito eléctrico 
 \end{frame}
 
 
-\begin{frame}[label={sec:orgbab5f79}]{Protección}
+\begin{frame}[label={sec:org610c3c5}]{Protección}
 \begin{itemize}
 \item Protección de los \alert{elementos de los circuitos} (cables,
 aparamenta) contra las tensiones térmicas y mecánicas de las
-corrientes de cortocircuito.
+corrientes de cortocircuito. \emph{Ej. Fusibles}.
 
-\item Protección de las \alert{personas} en caso de producirse un defecto de
-aislamiento.
+\item Protección de las \alert{personas} en caso de producirse un defecto de aislamiento. \emph{Ej. Interruptor Diferencial}.
 
-\item Protección de los \alert{dispositivos y aparatos suministrados} (ej. motores).
+\item Protección de los \alert{dispositivos y aparatos receptores}. \emph{Ej. Interruptor Magnetotérmico}.
 \end{itemize}
 \end{frame}
 
-\begin{frame}[label={sec:org8e70003}]{Aislamiento}
-Separar de forma verificable un circuito, un aparato o un elemento de
-la planta del resto de un sistema que se encuentra en tensión, con el
-fin de que el personal pueda realizar con total seguridad trabajos en
-la parte aislada.
+\begin{frame}[label={sec:org0bd8e96}]{Aislamiento}
+Separar de forma verificable un circuito, un aparato o un elemento de la planta del resto de un sistema que se encuentra en tensión, con el fin de que el personal pueda realizar con total seguridad trabajos en la parte aislada. 
+\emph{Ej. Seccionador}.
 \end{frame}
 
-\begin{frame}[label={sec:orgf5a863d}]{Control}
-Modificar un sistema cargado para:
+\begin{frame}[label={sec:org81dc8e4}]{Control}
+Modificar un sistema en carga para:
 
 \begin{itemize}
-\item Control funcional (condiciones normales de servicio, conmutación rutinaria).
+\item Control funcional (condiciones normales de servicio, conmutación rutinaria) (\emph{Ej. contactor})
 
 \item Conmutación de emergencia (ej. seta de parada)
 
@@ -413,10 +382,9 @@ Modificar un sistema cargado para:
 \end{itemize}
 \end{frame}
 
-\begin{frame}[label={sec:org3ab2e3d}]{Arco Eléctrico}
+\begin{frame}[label={sec:org3322bbb}]{Arco Eléctrico}
 \begin{itemize}
-\item Descarga eléctrica que se forma entre dos electrodos sometidos a una
-diferencia de potencial.
+\item Descarga eléctrica que se forma entre dos electrodos sometidos a una diferencia de potencial.
 \end{itemize}
 \begin{center}
 \includegraphics[height=0.35\textheight]{../figs/arco_electrico.jpg}
@@ -433,24 +401,22 @@ Vídeo: \href{http://www.youtube.com/watch?v=WBTvGqRA4\_0}{Apertura en Alta Tens
 \end{block}
 \end{frame}
 
-\begin{frame}[label={sec:org20b0ba5}]{Poder de corte y cierre}
+\begin{frame}[label={sec:orgc2cf8f1}]{Poder de corte y cierre}
 \begin{description}
-\item[{Poder de corte:}] intensidad de corriente que un dispositivo es
-capaz de cortar bajo una tensión de restablecimiento determinada.
+\item[{Poder de corte:}] intensidad de corriente que un dispositivo es capaz de cortar bajo una tensión de restablecimiento determinada.
 
-\item[{Poder de cierre:}] intensidad de corriente que un aparato es capaz
-de establecer bajo una tensión dada.
+\item[{Poder de cierre:}] intensidad de corriente que un aparato es capaz de establecer bajo una tensión dada.
 \end{description}
 \end{frame}
 
 \subsection{Tipos de Dispositivos}
-\label{sec:org73edabf}
+\label{sec:orgf4cebb0}
 
-\begin{frame}[label={sec:org7ca43ed}]{Seccionador}
+\begin{frame}[label={sec:org6feced8}]{Seccionador}
 \begin{itemize}
-\item Dispositivo de dos posiciones (abierto/cerrado) enclavable y accionado manualmente que proporciona un aislamiento seguro de un circuito cuando está enclavado en la posición abierta.
+\item Dispositivo de dos posiciones (abierto/cerrado) \alert{enclavable} y accionado \alert{manualmente} que proporciona un \alert{aislamiento seguro} de un circuito cuando está enclavado en la posición abierta.
 
-\item Un seccionador no está diseñado para abrir o cerrar el paso de la corriente.
+\item Un seccionador \alert{no} está diseñado para abrir o cerrar el paso de la corriente.
 \end{itemize}
 
 \begin{center}
@@ -458,11 +424,11 @@ de establecer bajo una tensión dada.
 \end{center}
 \end{frame}
 
-\begin{frame}[label={sec:org9eaf70d}]{Interruptor de carga}
+\begin{frame}[label={sec:orga7181c7}]{Interruptor de carga}
 \begin{itemize}
 \item Dispositivo no automático (\alert{accionamiento manual}) de dos posiciones (abierto/cerrado).
 
-\item Se utiliza para cerrar y abrir circuitos cargados en condiciones normales de circuitos sin defectos (no ofrece protección)
+\item Se utiliza para cerrar y abrir circuitos cargados en condiciones normales de circuitos sin defectos (\alert{no ofrece protección})
 \end{itemize}
 \begin{center}
 \includegraphics[height=0.6\textheight]{../figs/interruptor_manual.jpg}
@@ -470,11 +436,10 @@ de establecer bajo una tensión dada.
 \end{frame}
 
 
-\begin{frame}[label={sec:org3474b73}]{Contactor}
+\begin{frame}[label={sec:orgceeb356}]{Contactor}
 \begin{itemize}
-\item Dispositivo de conmutación accionado por solenoide que por lo general se mantiene cerrado mediante una corriente (reducida).
-
-\item Se suelen controlar de forma remota por medio de pulsadores de activación/desactivación.
+\item Dispositivo de conmutación accionado de forma remota.
+\item Utilizado para tareas de control.
 \end{itemize}
 
 \begin{center}
@@ -483,13 +448,15 @@ de establecer bajo una tensión dada.
 \end{frame}
 
 
-\begin{frame}[label={sec:org382aa3d}]{Fusible}
+\begin{frame}[label={sec:org5fe1b35}]{Fusible}
 \begin{columns}
 \begin{column}{0.7\columnwidth}
 \begin{itemize}
-\item Se funde por Efecto Joule cuando la intensidad de corriente supera un umbral, por un cortocircuito o un exceso de carga.
+\item Dispositivo de protección contra sobrecarga (corrientes superiores a un umbral durante un tiempo prolongado).
 
-\item Es capaz de abrir un circuito en carga.
+\item Se funde por Efecto Joule.
+
+\item Tiene poder de corte.
 \end{itemize}
 \end{column}
 \begin{column}{0.3\columnwidth}
@@ -501,13 +468,15 @@ de establecer bajo una tensión dada.
 \end{frame}
 
 
-\begin{frame}[label={sec:orgce675c7}]{Interruptor magnetotérmico}
+\begin{frame}[label={sec:orgbfb5b6a}]{Interruptor magnetotérmico}
 \begin{columns}
 \begin{column}{0.6\columnwidth}
 \begin{itemize}
 \item Dispositivo \alert{automático} capaz de interrumpir la corriente eléctrica de un circuito cuando ésta sobrepasa ciertos valores máximos.
 
-\item Se emplea para \alert{proteger contra sobreintensidades} (\emph{efecto magnético}) y \alert{sobrecargas} (\emph{efecto Joule}).
+\item \alert{Protege contra sobreintensidades} (\emph{efecto magnético}), corrientes muy elevadas durante lapsos cortos.
+
+\item \alert{Protege contra sobrecargas} (\emph{efecto Joule}), corrientes superiores a un umbral de forma sostenida.
 \end{itemize}
 \end{column}
 
@@ -523,11 +492,11 @@ Vídeo: \href{http://www.youtube.com/watch?v=c6QqnLgWbCQ}{Apertura de un PIA}
 \end{block}
 \end{frame}
 
-\begin{frame}[label={sec:orge95b907}]{Interruptor diferencial}
+\begin{frame}[label={sec:orgf56ec10}]{Interruptor diferencial}
 \begin{itemize}
 \item Dispositivo \alert{automático} con poder de corte ante una corriente diferencial residual (defecto de aislamiento).
 \item Se emplea para la \alert{protección de las personas}.
-\item Para la detección emplea un transformador toroidal que abraza a todos los conductores.
+\item Un transformador toroidal abraza a todos los conductores y detecta diferencia de flujo magnético.
 \end{itemize}
 
 \begin{columns}
@@ -548,9 +517,9 @@ Vídeo: \href{http://www.youtube.com/watch?v=c6QqnLgWbCQ}{Apertura de un PIA}
 
 
 \section{Recursos}
-\label{sec:org446d83e}
+\label{sec:orgdeabf79}
 
-\begin{frame}[label={sec:org0597859}]{Bibliografía}
+\begin{frame}[label={sec:org664cbcc}]{Bibliografía}
 \begin{itemize}
 \item \alert{Fraile Mora, J.}: \emph{Máquinas Eléctricas}. Ed. Mc. Graw Hill.
 
